# clike

./: CMakeLists.txt
src/: cmd_main.cpp  main.cpp  version.h
src/clike/: ast.h  ast_builder.cpp  ast_builder.h  ast_type.cpp  ast_type.h  binary_evaluator.h  constant_value.h  constant_value_boolean.h  constant_value_boolean_type.h  constant_value_builtin.h  constant_value_integer.h  constant_value_integer_vector.h  constant_value_literal.cpp  constant_value_literal.h  constant_value_nan.h  digit_vector.h  external_variables.cpp  external_variables.h  integer.h  integer_parser.cpp  integer_parser.h  interpreter.h  lexer.cpp  lexer.h  lexer.l  location.hh  location_error.h  parser.cpp  parser.h  parser.yy  parser_report.txt  type_factory.h  type_system.h  vector.h
test/: test_basic.cpp  test_common.cpp  test_common.h  test_integer.cpp  test_type_factories.h
test/resources/: test_001.clike  test_003.clike  test_004.clike  test_005.clike  test_006.clike  test_007.clike  test_008.clike  test_009.clike  test_010.clike  test_011.clike  test_012.clike  test_013.clike  test_014.clike  test_015.clike  test_016.clike  test_017.clike  test_018.clike  test_019.clike  test_020.clike  test_021.clike  test_022.clike  test_023.clike  test_024.clike  test_025.clike  test_026.clike  test_027.clike  test_028.clike  test_029.clike  test_030.clike  test_031.clike  test_032.clike  test_033.clike  test_034.clike  test_035.clike  test_036.clike  test_037.clike  test_038.clike  test_039.clike  test_040.clike  test_041.clike  (+338 more)
